fixed overflow and deleteroom

--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -11,7 +11,7 @@ html, body, #root, .game-main-container, .bottom-profile-container {
 }
 
 .profile-bg-container{
-    width: 100vw;
+    width: 100%;
     height: 40vw;
     max-height: 45vh;
     position: relative;
@@ -113,7 +113,7 @@ html, body, #root, .game-main-container, .bottom-profile-container {
 }
 
 .bottom-profile-container{
-    width: 100vw;
+    width: 100%;
     background-image: linear-gradient(180deg,
     #050326, #02111d,#0b263e,#264968,#7895ae);
     max-height: 100%;
